--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+@media only screen and (max-width: 700px){
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .responsive {
+        width: 100%;
+    }
+}
+
+
+
 .circle {
 	height: 500px;
 	width: 500px;
