--- a/home/style.css
+++ b/home/style.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Open Sans', sans-serif;
+}
+
 @media only screen and (max-width: 700px){
     .responsive {
         width: 49.99999%;
