--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Open Sans', sans-serif;
+}
+
 @media only screen and (max-width: 700px){
     .responsive {
         width: 49.99999%;
@@ -11,15 +15,20 @@
     }
 }
 
-
-
-.circle {
-	height: 500px;
-	width: 500px;
-	border-radius: 50%;
-
-
- */.grow1 {
-	transform: scale(2);
+#homecircle {
+  -webkit-transition: all 2s ease-out;
+  -moz-transition: all 2s ease-out;
+  -ms-transition: all 2s ease-out;
+  -o-transition: all 2s ease-out;
+  transition: all 2s ease-out;
 }
-/*
+
+#homecircle:hover{
+  /*-webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+        transform: scale(1.3);
+        transform-origin: center;*/
+         box-shadow: inset 0 0 0 25px #53a7ea;
+
+
+}
