--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@
   /*-webkit-transform: scale(1.3);
         -ms-transform: scale(1.3);
         transform: scale(1.3);
-        transform-origin: center;*/
-         box-shadow: inset 0 0 0 25px #53a7ea;
+        transform-origin: center;
+         box-shadow: inset 0 0 0 25px #53a7ea;*/
+    opacity:1.0;
 
 
 }
