--- a/contact/style.css
+++ b/contact/style.css
@@ -23,12 +23,19 @@ ul {
 }
 .main {
     position: absolute;
-    left:250px; top:150px; right:0; bottom:0;
-    font-size: 20px;
+    left:250px; top:150px; right:300px; bottom:0;
+    font-size: 16px;
+}
+
+.logo {
+  transform: scale(0.5, 0.5);
+  position: absolute;
+  left:650px; top:0px; right:0px; bottom:50px;
 }
 
 form {
     background-color: #CC7261; /* Red */
+    opacity: .85;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -38,12 +45,16 @@ form {
     border-radius: 4px;
 }
 
+label {
+  color:white;
+}
+
 button {
   display: inline-block;
   border-radius: 4px;
+  color: #FFFFFF;
   background-color: #CC7261; /* Red */
   border: none;
-  color: #FFFFFF;
   text-align: center;
   font-size: 28px;
   padding: 20px;
@@ -51,6 +62,7 @@ button {
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
+  opacity:.85;
 }
 
 button span {
@@ -58,6 +70,8 @@ button span {
   display: inline-block;
   position: relative;
   transition: 0.5s;
+  color: #FFFFFF;
+  opacity:.85;
 }
 
 button span:after {
