--- a/home/style.css
+++ b/home/style.css
@@ -23,8 +23,14 @@ ul {
 }
 .main {
     position: absolute;
-    left:250px; top:150px; right:0; bottom:0;
-    font-size: 20px;
+    left:250px; top:150px; right:300px; bottom:0;
+    font-size: 16px;
+}
+
+.logo {
+  transform: scale(0.5, 0.5);
+  position: absolute;
+  left:650px; top:0px; right:0px; bottom:50px;
 }
 
 @media only screen and (max-width: 700px){
