--- a/resources/style.css
+++ b/resources/style.css
@@ -10,6 +10,25 @@ ul {
   padding: 0;
 }
 
+img {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  transform-origin: 50% 50%;
+}
+
+img:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  transform-origin: 50% 50%; 
+}
+
 .title {
     position:absolute;
     left:243px; right:0;
@@ -23,8 +42,14 @@ ul {
 }
 .main {
     position: absolute;
-    left:250px; top:150px; right:0; bottom:0;
-    font-size: 20px;
+    left:250px; top:150px; right:300px; bottom:0;
+    font-size: 16px;
+}
+
+.logo {
+  transform: scale(0.5, 0.5);
+  position: absolute;
+  left:650px; top:0px; right:0px; bottom:50px;
 }
 
 @media only screen and (max-width: 700px){
