--- a/about/style.css
+++ b/about/style.css
@@ -10,6 +10,26 @@ ul {
   padding: 0;
 }
 
+img {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  transform-origin: 50% 50%;
+}
+
+img:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  transform-origin: 50% 50%; 
+}
+
+
 .title {
     position:absolute;
     left:243px; right:0;
