--- a/about/style.css
+++ b/about/style.css
@@ -26,7 +26,7 @@ img {
 img:hover {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
-  transform-origin: 50% 50%; 
+  transform-origin: 50% 50%;
 }
 
 
@@ -50,7 +50,10 @@ img:hover {
 .logo {
   transform: scale(0.5, 0.5);
   position: absolute;
-  left:650px; top:0px; right:0px; bottom:50px;
+  left: 953px;
+  top:0px;
+  right:0px;
+  bottom: 666px;
 }
 
 @media only screen and (max-width: 700px){
